# app

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.agent-runtime.json  tsconfig.app.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
.husky/: pre-commit
scripts/: build-agent-runtime.mjs  bump-version.mjs  copy-file-icons.mjs  i18n-audit.mts  i18n-sections.mts  make-dmg.mjs  prepare-lsp-bundle.mjs  snapshot-catalog.mjs  update-fragment.mjs  update-manifest.mjs  verify-release.mjs
src/: App.tsx  index.css  main.tsx
src-agent-runtime/: index.ts
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: llm_poc.rs
src-tauri/icons/: icon.icns
src-tauri/mlx-bridge/: Package.resolved  Package.swift
src-tauri/mlx-bridge/Sources/CodezalMLXBridge/: CodezalMLXBridge.swift
src-tauri/mlx-bridge/Sources/CodezalMLXHelper/: main.swift
src-tauri/resources/git/: README.md
src-tauri/src/: browser.rs  chat_parse.rs  chat_render.rs  code_map.rs  db.rs  editors.rs  exec.rs  fs.rs  inference.rs  lib.rs  lsp.rs  mlx_native.rs  pty.rs  secrets.rs  server.rs
src/components/: ActivityHeatmap.tsx  AgentCard.tsx  AgentTranscript.tsx  ApprovalModal.tsx  BranchPicker.tsx  ChecksBar.tsx  CodeBlock.tsx  CodeEditor.tsx  CodeView.tsx  CommandPalette.tsx  CommitBar.tsx  Composer.tsx  ConfirmDialog.tsx  ContextPanel.tsx  Dialog.tsx  DiffView.tsx  DiffViewer.tsx  EditorContextMenu.tsx  ErrorBanner.tsx  FileViewer.tsx  ForkDialog.tsx  GitErrorDialog.tsx  GitPanel.tsx  HelpOverlay.tsx  ImageLightbox.tsx  InlineEditBar.tsx  Markdown.tsx  Mascot.tsx  MentionMenu.tsx  MermaidBlock.tsx  MessageList.tsx  NewChatActivity.tsx  NewWorktreeDialog.tsx  Onboarding.tsx  OrchestraConfigModal.tsx  OutputViewer.tsx  PRConversationViewer.tsx  PRPanel.tsx  PermissionRuleEditor.tsx  PluginInstallApproval.tsx  (+30 more)
src/components/sdd/: SddRequirementView.tsx  SddStepper.tsx  useSddDocSync.ts
src/components/settings/: AboutTab.tsx  AppearanceTab.tsx  ApprovalTab.tsx  CliAgentsTab.tsx  CustomProviderModal.tsx  GeneralTab.tsx  HistoryTab.tsx  HooksTab.tsx  ImageGenTab.tsx  LocalModelsPage.tsx  LocalServerTab.tsx  McpTab.tsx  MemoryTab.tsx  ModelsPage.tsx  PrivacyTab.tsx  ProviderConnectModal.tsx  ProviderPickerModal.tsx  SemanticTab.tsx  SkillsTab.tsx  StatsTab.tsx  SupervisorSettingsSection.tsx  TokenSavingTab.tsx  WebSearchTab.tsx  primitives.tsx  providers-section.tsx
src/lib/: agents-seed.ts  agents.ts  autopilot-bg.ts  autopilot-state.ts  autopilot-templates.ts  browser.ts  catalog-snapshot.ts  color-utils.ts  commands.ts  commit-attribution.ts  compact.ts  composer-drop.ts  cron.ts  detect-urls.ts  diff-uri.ts  diff.ts  dir-refresh-bus.ts  editor-dirty.ts  editor-drafts.ts  editor-save.ts  editors.ts  embedding.ts  errors.ts  exec.ts  file-clipboard.ts  file-content-cache.ts  file-icons.tsx  file-invalidate.ts  file-scroll-cache.ts  file-type.ts  file-watcher.ts  format-time.ts  format.ts  fs-browse.ts  fs-path.ts  fs-safe.ts  git-ai-commit.ts  git-events.ts  git.ts  github.ts  (+98 more)
src/lib/agent-providers/: index.ts  native-prompt.ts  native-stream.ts  runtime-client.ts  tool-proxy.ts  types.ts
src/lib/agents/: index.ts  parse.ts  plugin.ts  types.ts  user.ts
src/lib/async/: queue.ts  semaphore.ts  timeout.ts
src/lib/codemirror/: lang.ts  theme.ts
src/lib/commands/: builtin.ts  index.ts  parse.ts  plugin.ts  templates.ts  types.ts  user.ts  workflow.ts
src/lib/config/: defaults.ts  effective.ts  index.ts  merge.ts  migrate.ts  parse.ts  project.ts  schema.ts  settings.schema.json  variable.ts
src/lib/db/: driver.tauri.ts  driver.ts  index.ts  memory-db.ts  migrate-json.ts  schema.ts  sessions-db.ts
src/lib/documents/: csv.ts  docx.ts  index.ts  pptx.ts  table.ts  xlsx.ts  zip.ts
src/lib/harness-history/: external-sqlite.ts  indexer.ts  io.ts  normalize.ts  paths.ts  store.ts  types.ts
src/lib/hooks/: use-mascot-state.ts  useBootDraft.ts  useBootStores.ts  useKeyboardShortcuts.ts  useNavHistory.ts  useNewSession.ts  usePanelState.ts  useSuggestionsAuto.ts  useTodoPanelAuto.ts
src/lib/i18n/: index.ts  types-messages.ts  types.ts  useT.ts
src/lib/lsp/: client.ts  download.ts  index.ts  language.ts  manager.ts  servers.ts  uri.ts
src/lib/memory-store/: core.ts  index.ts  store.ts  types.ts
src/lib/methods/: core.ts  index.ts  store.ts  types.ts
src/lib/monaco/: code-actions.ts  setup.ts
src/lib/orchestra/: cli-protocols.ts  codenames.ts  isolation.ts  runtime.ts  types.ts
src/store/: agent-runs.ts  approvals.ts  browser-shots.ts  composer-drafts.ts  generated-images.ts  jobs.ts  local-runtime.ts  preview.ts  questions.ts  sdd.ts  sessions.ts  settings.ts  suggestions.ts  terminals.ts  toast.ts  token-savings.ts  tool-telemetry.ts  types.ts  update.ts  workflows.ts  write-diffs.ts
src/styles/: codemirror.css  highlight.css
tests/: agent-providers.test.ts  agent-runs-store.test.ts  agent-supervisor.test.ts  agents-parse.test.ts  agents-seed.test.ts  approval-match.test.ts  audit.test.ts  auth.test.ts  brief-mode-inject.test.ts  brief-mode.test.ts  catalog-derived.test.ts  code-symbol.test.ts  codemirror-lang.test.ts  color-utils.test.ts  commands-parse.test.ts  compact-messages.test.ts  compact-output-filters.test.ts  compact-output-run.test.ts  compact.test.ts  compress-prose.test.ts  compress-tools.test.ts  config-memory.test.ts  config-parse.test.ts  config-variable.test.ts  cron.test.ts  custom-derived.test.ts  dangerous-bash.test.ts  db-migration-parity.test.ts  detect-urls.test.ts  diff-viewer.test.ts  diff-wordlevel.test.ts  diff.test.ts  dir-refresh-bus.test.ts  documents.test.ts  doom-loop.test.ts  editor-dirty.test.ts  editor-save.test.ts  embedding.test.ts  file-content-cache.test.ts  file-invalidate.test.ts  (+123 more)
tests/helpers/: node-db.ts  tauri-core-stub.ts
(+219 files in other folders)
